Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjObjectField.quorum
class Main
    Text v = Test()
    action Main
    end

    action Test() returns Text
        Object var
        return var
    end
end